--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/youyilulu/tutorial.git"
   },
   "author": "youyilulu",
   "license": "MIT"
