--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "egg-scripts": "^2.10.0",
+    "egg-ts": "../tutorial_plugins/egg-ts",
     "midway": "^1.0.0",
     "mysql2": "^2.0.1",
     "sequelize": "^5.21.2",
-    "sequelize-typescript": "^1.0.0",
-    "egg-ts": "../tutorial_plugins/egg-ts"
+    "sequelize-typescript": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.5.5",
