--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "lint": "tslint --fix -p tsconfig.json -t stylish",
     "ci": "npm run cov",
     "build": "midway-bin build -c",
-    "create-db": "cross-env NODE_ENV=create-db midway-bin dev --ts"
+    "create-db": "cross-env NODE_ENV=create-db midway-bin dev --ts",
+    "doc": "midway-bin doc"
   },
   "ci": {
     "version": "10"
